// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`model-generator generates model with all CRUD methods 1`] = `
"/**
 * User model for ORM client
 * @generated by @constructive-io/graphql-codegen
 * DO NOT EDIT - changes will be overwritten
 */
import { OrmClient } from "../client";
import { QueryBuilder, buildFindManyDocument, buildFindFirstDocument, buildFindOneDocument, buildCreateDocument, buildUpdateByPkDocument, buildDeleteByPkDocument } from "../query-builder";
import type { ConnectionResult, FindManyArgs, FindFirstArgs, CreateArgs, UpdateArgs, DeleteArgs, InferSelectResult, DeepExact } from "../select-types";
import type { User, UserWithRelations, UserSelect, UserFilter, UsersOrderBy, CreateUserInput, UpdateUserInput, UserPatch } from "../input-types";
const defaultSelect = {
  id: true
} as const;
export class UserModel {
  constructor(private client: OrmClient) {}
  findMany<const S extends UserSelect = typeof defaultSelect>(args?: FindManyArgs<DeepExact<S, UserSelect>, UserFilter, UsersOrderBy>): QueryBuilder<{
    users: ConnectionResult<InferSelectResult<UserWithRelations, S>>;
  }> {
    const {
      document,
      variables
    } = buildFindManyDocument("User", "users", args?.select ?? defaultSelect, {
      where: args?.where,
      orderBy: args?.orderBy as string[] | undefined,
      first: args?.first,
      last: args?.last,
      after: args?.after,
      before: args?.before,
      offset: args?.offset
    }, "UserFilter", "UsersOrderBy");
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "User",
      fieldName: "users",
      document,
      variables
    });
  }
  findFirst<const S extends UserSelect = typeof defaultSelect>(args?: FindFirstArgs<DeepExact<S, UserSelect>, UserFilter>): QueryBuilder<{
    users: {
      nodes: InferSelectResult<UserWithRelations, S>[];
    };
  }> {
    const {
      document,
      variables
    } = buildFindFirstDocument("User", "users", args?.select ?? defaultSelect, {
      where: args?.where
    }, "UserFilter");
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "User",
      fieldName: "users",
      document,
      variables
    });
  }
  findOne<const S extends UserSelect = typeof defaultSelect>(args: {
    id: string;
    select?: DeepExact<S, UserSelect>;
  }): QueryBuilder<{
    user: InferSelectResult<UserWithRelations, S> | null;
  }> {
    const {
      document,
      variables
    } = buildFindOneDocument("User", "user", args.id, args.select ?? defaultSelect, "id", "UUID!");
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "User",
      fieldName: "user",
      document,
      variables
    });
  }
  create<const S extends UserSelect = typeof defaultSelect>(args: CreateArgs<DeepExact<S, UserSelect>, CreateUserInput["user"]>): QueryBuilder<{
    createUser: {
      user: InferSelectResult<UserWithRelations, S>;
    };
  }> {
    const {
      document,
      variables
    } = buildCreateDocument("User", "createUser", "user", args.select ?? defaultSelect, args.data, "CreateUserInput");
    return new QueryBuilder({
      client: this.client,
      operation: "mutation",
      operationName: "User",
      fieldName: "createUser",
      document,
      variables
    });
  }
  update<const S extends UserSelect = typeof defaultSelect>(args: UpdateArgs<DeepExact<S, UserSelect>, {
    id: string;
  }, UserPatch>): QueryBuilder<{
    updateUser: {
      user: InferSelectResult<UserWithRelations, S>;
    };
  }> {
    const {
      document,
      variables
    } = buildUpdateByPkDocument("User", "updateUser", "user", args.select ?? defaultSelect, args.where.id, args.data, "UpdateUserInput", "id");
    return new QueryBuilder({
      client: this.client,
      operation: "mutation",
      operationName: "User",
      fieldName: "updateUser",
      document,
      variables
    });
  }
  delete<const S extends UserSelect = typeof defaultSelect>(args: DeleteArgs<{
    id: string;
  }, DeepExact<S, UserSelect>>): QueryBuilder<{
    deleteUser: {
      user: InferSelectResult<UserWithRelations, S>;
    };
  }> {
    const {
      document,
      variables
    } = buildDeleteByPkDocument("User", "deleteUser", "user", args.where.id, "DeleteUserInput", "id", args.select ?? defaultSelect);
    return new QueryBuilder({
      client: this.client,
      operation: "mutation",
      operationName: "User",
      fieldName: "deleteUser",
      document,
      variables
    });
  }
}"
`;

exports[`model-generator generates model without update/delete when not available 1`] = `
"/**
 * AuditLog model for ORM client
 * @generated by @constructive-io/graphql-codegen
 * DO NOT EDIT - changes will be overwritten
 */
import { OrmClient } from "../client";
import { QueryBuilder, buildFindManyDocument, buildFindFirstDocument, buildFindOneDocument, buildCreateDocument, buildUpdateByPkDocument, buildDeleteByPkDocument } from "../query-builder";
import type { ConnectionResult, FindManyArgs, FindFirstArgs, CreateArgs, UpdateArgs, DeleteArgs, InferSelectResult, DeepExact } from "../select-types";
import type { AuditLog, AuditLogWithRelations, AuditLogSelect, AuditLogFilter, AuditLogsOrderBy, CreateAuditLogInput, UpdateAuditLogInput, AuditLogPatch } from "../input-types";
const defaultSelect = {
  id: true
} as const;
export class AuditLogModel {
  constructor(private client: OrmClient) {}
  findMany<const S extends AuditLogSelect = typeof defaultSelect>(args?: FindManyArgs<DeepExact<S, AuditLogSelect>, AuditLogFilter, AuditLogsOrderBy>): QueryBuilder<{
    auditLogs: ConnectionResult<InferSelectResult<AuditLogWithRelations, S>>;
  }> {
    const {
      document,
      variables
    } = buildFindManyDocument("AuditLog", "auditLogs", args?.select ?? defaultSelect, {
      where: args?.where,
      orderBy: args?.orderBy as string[] | undefined,
      first: args?.first,
      last: args?.last,
      after: args?.after,
      before: args?.before,
      offset: args?.offset
    }, "AuditLogFilter", "AuditLogsOrderBy");
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "AuditLog",
      fieldName: "auditLogs",
      document,
      variables
    });
  }
  findFirst<const S extends AuditLogSelect = typeof defaultSelect>(args?: FindFirstArgs<DeepExact<S, AuditLogSelect>, AuditLogFilter>): QueryBuilder<{
    auditLogs: {
      nodes: InferSelectResult<AuditLogWithRelations, S>[];
    };
  }> {
    const {
      document,
      variables
    } = buildFindFirstDocument("AuditLog", "auditLogs", args?.select ?? defaultSelect, {
      where: args?.where
    }, "AuditLogFilter");
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "AuditLog",
      fieldName: "auditLogs",
      document,
      variables
    });
  }
  findOne<const S extends AuditLogSelect = typeof defaultSelect>(args: {
    id: string;
    select?: DeepExact<S, AuditLogSelect>;
  }): QueryBuilder<{
    auditLog: InferSelectResult<AuditLogWithRelations, S> | null;
  }> {
    const {
      document,
      variables
    } = buildFindOneDocument("AuditLog", "auditLog", args.id, args.select ?? defaultSelect, "id", "UUID!");
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "AuditLog",
      fieldName: "auditLog",
      document,
      variables
    });
  }
  create<const S extends AuditLogSelect = typeof defaultSelect>(args: CreateArgs<DeepExact<S, AuditLogSelect>, CreateAuditLogInput["auditLog"]>): QueryBuilder<{
    createAuditLog: {
      auditLog: InferSelectResult<AuditLogWithRelations, S>;
    };
  }> {
    const {
      document,
      variables
    } = buildCreateDocument("AuditLog", "createAuditLog", "auditLog", args.select ?? defaultSelect, args.data, "CreateAuditLogInput");
    return new QueryBuilder({
      client: this.client,
      operation: "mutation",
      operationName: "AuditLog",
      fieldName: "createAuditLog",
      document,
      variables
    });
  }
}"
`;

exports[`model-generator handles custom query/mutation names 1`] = `
"/**
 * Organization model for ORM client
 * @generated by @constructive-io/graphql-codegen
 * DO NOT EDIT - changes will be overwritten
 */
import { OrmClient } from "../client";
import { QueryBuilder, buildFindManyDocument, buildFindFirstDocument, buildFindOneDocument, buildCreateDocument, buildUpdateByPkDocument, buildDeleteByPkDocument } from "../query-builder";
import type { ConnectionResult, FindManyArgs, FindFirstArgs, CreateArgs, UpdateArgs, DeleteArgs, InferSelectResult, DeepExact } from "../select-types";
import type { Organization, OrganizationWithRelations, OrganizationSelect, OrganizationFilter, OrganizationsOrderBy, CreateOrganizationInput, UpdateOrganizationInput, OrganizationPatch } from "../input-types";
const defaultSelect = {
  id: true
} as const;
export class OrganizationModel {
  constructor(private client: OrmClient) {}
  findMany<const S extends OrganizationSelect = typeof defaultSelect>(args?: FindManyArgs<DeepExact<S, OrganizationSelect>, OrganizationFilter, OrganizationsOrderBy>): QueryBuilder<{
    allOrganizations: ConnectionResult<InferSelectResult<OrganizationWithRelations, S>>;
  }> {
    const {
      document,
      variables
    } = buildFindManyDocument("Organization", "allOrganizations", args?.select ?? defaultSelect, {
      where: args?.where,
      orderBy: args?.orderBy as string[] | undefined,
      first: args?.first,
      last: args?.last,
      after: args?.after,
      before: args?.before,
      offset: args?.offset
    }, "OrganizationFilter", "OrganizationsOrderBy");
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "Organization",
      fieldName: "allOrganizations",
      document,
      variables
    });
  }
  findFirst<const S extends OrganizationSelect = typeof defaultSelect>(args?: FindFirstArgs<DeepExact<S, OrganizationSelect>, OrganizationFilter>): QueryBuilder<{
    allOrganizations: {
      nodes: InferSelectResult<OrganizationWithRelations, S>[];
    };
  }> {
    const {
      document,
      variables
    } = buildFindFirstDocument("Organization", "allOrganizations", args?.select ?? defaultSelect, {
      where: args?.where
    }, "OrganizationFilter");
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "Organization",
      fieldName: "allOrganizations",
      document,
      variables
    });
  }
  findOne<const S extends OrganizationSelect = typeof defaultSelect>(args: {
    id: string;
    select?: DeepExact<S, OrganizationSelect>;
  }): QueryBuilder<{
    organizationById: InferSelectResult<OrganizationWithRelations, S> | null;
  }> {
    const {
      document,
      variables
    } = buildFindOneDocument("Organization", "organizationById", args.id, args.select ?? defaultSelect, "id", "UUID!");
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "Organization",
      fieldName: "organizationById",
      document,
      variables
    });
  }
  create<const S extends OrganizationSelect = typeof defaultSelect>(args: CreateArgs<DeepExact<S, OrganizationSelect>, CreateOrganizationInput["organization"]>): QueryBuilder<{
    registerOrganization: {
      organization: InferSelectResult<OrganizationWithRelations, S>;
    };
  }> {
    const {
      document,
      variables
    } = buildCreateDocument("Organization", "registerOrganization", "organization", args.select ?? defaultSelect, args.data, "CreateOrganizationInput");
    return new QueryBuilder({
      client: this.client,
      operation: "mutation",
      operationName: "Organization",
      fieldName: "registerOrganization",
      document,
      variables
    });
  }
  update<const S extends OrganizationSelect = typeof defaultSelect>(args: UpdateArgs<DeepExact<S, OrganizationSelect>, {
    id: string;
  }, OrganizationPatch>): QueryBuilder<{
    modifyOrganization: {
      organization: InferSelectResult<OrganizationWithRelations, S>;
    };
  }> {
    const {
      document,
      variables
    } = buildUpdateByPkDocument("Organization", "modifyOrganization", "organization", args.select ?? defaultSelect, args.where.id, args.data, "UpdateOrganizationInput", "id");
    return new QueryBuilder({
      client: this.client,
      operation: "mutation",
      operationName: "Organization",
      fieldName: "modifyOrganization",
      document,
      variables
    });
  }
  delete<const S extends OrganizationSelect = typeof defaultSelect>(args: DeleteArgs<{
    id: string;
  }, DeepExact<S, OrganizationSelect>>): QueryBuilder<{
    removeOrganization: {
      organization: InferSelectResult<OrganizationWithRelations, S>;
    };
  }> {
    const {
      document,
      variables
    } = buildDeleteByPkDocument("Organization", "removeOrganization", "organization", args.where.id, "DeleteOrganizationInput", "id", args.select ?? defaultSelect);
    return new QueryBuilder({
      client: this.client,
      operation: "mutation",
      operationName: "Organization",
      fieldName: "removeOrganization",
      document,
      variables
    });
  }
}"
`;
